Networking_26102024/firefox.yaml
  apiVersion: v1
  kind: Pod
  metadata:
    name: firefox-pod
    labels:
      browser: firefox
  spec:
    containers:
      - name: firefoxcontainer
        image: linuxserver/firefox
        ports: 
          - containerPort: 9000
