Networking_26102024/nginx.yaml
  apiVersion: v1
  kind: Pod
  metadata:
    name: nginx-pod    #Name of the POD
    labels:
      nginx: webserver 
    
  spec:
    containers:
      - name: nginx-container #Name of the contaner in the PD
        image: nginx
        ports: 
          - containerPort: 80 #Container Port
