Networking_26102024/networkPolicy.yaml
  apiVersion: networking.k8s.io/v1
  kind: NetworkPolicy
  metadata:
    name:	inbound-policy
    namespace: default
  spec:
    ingress:
      - from:
          - ipBlock:
              cidr: 10.244.0.124/32
        ports:
          - port: 81
        podSelector:
          matchLabels: 
            nginx: webserver
